# zscript

./: .gitignore  LICENSE  RCode.md  README.md  pom.xml
.github/workflows/: maven.yaml
acceptance-tests/: pom.xml
acceptance-tests-old/: pom.xml
acceptance-tests/src/test/resources/: junit-platform.properties  logback-test.xml
arduino-cpp-receiver/: pom.xml
arm-no-os/: .cproject  Makefile  pom.xml
arm-no-os/src/test/openocd/: openocd.cfg
clients/: pom.xml
clients/java-client-lib/: pom.xml
clients/java-client-lib-alternate/: pom.xml
clients/java-client-lib-alternate/client-core/: pom.xml
clients/java-client-lib/client-command-api/: pom.xml
clients/java-client-lib/client-command-builders/: pom.xml
clients/java-client-lib/client-connection/: pom.xml
clients/java-client-lib/client-core/: pom.xml
clients/java-client-lib/client-main/: pom.xml
clients/java-client-lib/client-transformer-adapter/: pom.xml
clients/java-client-lib/tools/: pom.xml
demo/: pom.xml
demo/demo-01/: pom.xml
demo/demo-01/client/: pom.xml
demo/demo-01/firmware/: pom.xml
demo/demo-morse/: pom.xml
demo/demo-morse/client/: pom.xml
docs/: Zcode.md
docs/dev/: design-diary.md  dev-setup.md  style-guide  usb-helpful-links
docs/spec/: zcode-description.md  zscript-description.md
docs/tutorial/: audience.md  concepts.md  modules.md  syntax.md
generic-cpp-receiver/: .cproject  Makefile  pom.xml
generic-cpp-receiver/src/test/cpp/: localtest1
generic-cpp-receiver/src/test/ld/: STM32G484QETX_FLASH.ld
generic-cpp-receiver/src/test/openocd/: openocd.cfg
java-receiver/: pom.xml
java-receiver-acceptance-tests/: pom.xml
mbed-cpp-receiver/: .cproject  Makefile
misc/admin/: release-notes.sh
misc/eclipse-profiles/: Zcode_cpp_format.xml  Zcode_java_cleanup.xml  Zcode_java_format.xml  Zscript_cpp_format.xml  Zscript_java_cleanup.xml  Zscript_java_format.xml  zscript.importorder
misc/intellij-profiles/: Zscript-java-idea.xml
model/: pom.xml
model/language-definition/: pom.xml
model/model-templating-adapter/: pom.xml
model/model-templating-context-loader/: pom.xml
model/model-transformer-adapter/: pom.xml
model/schema/: pom.xml
model/src/main/resources/: CommandBuilder.mustache  intrinsics.yaml
model/standard-definitions/: pom.xml
model/standard-module-definitions/: pom.xml
model/transformer-maven-plugin/: pom.xml
model/transformer-maven-plugin-adapter/: pom.xml
model/zscript-client-transformer-adapter/: pom.xml
network-receiver-acceptance-tests/: pom.xml
receivers/: pom.xml
receivers/generic-c++/cpp-model-components/: pom.xml
receivers/jvm/: pom.xml
receivers/jvm/java-model-components/: pom.xml
receivers/jvm/java-receiver/: pom.xml
receivers/jvm/java-receiver-acceptance-tests/: pom.xml
receivers/jvm/java-receiver-token/: pom.xml
receivers/jvm/java-tokenizer/: pom.xml
receivers/language-definition/: pom.xml
receivers/native/: pom.xml
receivers/native/arduino/: pom.xml
receivers/native/arm/: pom.xml
receivers/native/arm/examples/: pom.xml
receivers/native/arm/no-os/: pom.xml
receivers/native/c++/: pom.xml
receivers/native/c-small/: pom.xml
receivers/native/cpp-model-components/: pom.xml
receivers/native/generic-core/: Makefile  pom.xml
receivers/native/generic-core-2/: .autotools  pom.xml
receivers/native/generic-core-3/: pom.xml
receivers/native/generic-core-deprecated/: pom.xml
receivers/native2/: pom.xml
receivers/native2/c-generic-core/: CMakeLists.txt  pom.xml
receivers/native2/c-generic-core/src/main/c/: CMakeLists.txt
receivers/native2/c-generic-core/src/main/c/zscript/: all.h  all_defs.h
receivers/native2/c-generic-core/src/main/c/zscript/misc/: ByteString.h  General.h  General_defs.h  OptUint.h  SysErrors.h  SysErrors_defs.h
receivers/native2/c-generic-core/src/main/c/zscript/sys/: zscriptsys.h  zscriptsys_defs.h
receivers/native2/c-generic-core/src/main/c/zscript/tokenbuffer/: TokenBufferFlags.h  TokenBufferFlags_defs.h  TokenRingBuffer.h  TokenRingBufferReader.h  TokenRingBufferReader_defs.h  TokenRingBufferWriter.h  TokenRingBufferWriter_defs.h  TokenRingBuffer_defs.h  tokenbuffer.h  tokenbuffer_defs.h
receivers/native2/c-generic-core/src/main/c/zscript/tokenizer/: Tokenizer.h  Tokenizer_defs.h
receivers/native2/c-generic-core/src/main/cmake/: core-version.h.in  zscript-generic-core-config.cmake.in
receivers/native2/c-generic-core/src/test/c/: CMakeLists.txt
receivers/native2/c-generic-core/src/test/c/zscript/testing/: TestTools.h
receivers/native2/c-generic-core/src/test/c/zscript/tokenbuffer/: Basics_tests.c  CMakeLists.txt  TokenBufferFlags_tests.c  TokenRingBufferReader_tests.c  TokenRingBufferWriter_tests.c  TokenRingBuffer_Writer_tests.c  TokenRingBuffer_tests.c  tokenbuffer_tests.c
receivers/native2/c-generic-core/src/test/c/zscript/tokenizer/: CMakeLists.txt  Tokenizer_tests.c
receivers/native2/c-model-components/: CMakeLists.txt  pom.xml
receivers/native2/c-model-components/src/main/cmake/: core-version.h.in  zscript-model-components-config.cmake.in
receivers/native2/c-model-components/src/main/contexts/: zchars-list.yaml  zstatus-list.yaml
receivers/native2/c-model-components/src/main/templates/: C-Zchars.mustache  C-Zstatus.mustache
receivers/native2/c-model-components/src/test/c/: CMakeLists.txt  generated_code_test.c
receivers/network-receiver-acceptance-tests/: pom.xml
simulator/: pom.xml
simulator/JavaZCodeClientAlt/: pom.xml
simulator/zscript-simulator-jvm/: pom.xml
util/: pom.xml
util/java-testing-deps/: pom.xml
util/misc/: pom.xml
util/mustache-templating/: pom.xml
util/mustache-templating/mustache-templating-maven-plugin/: pom.xml
util/mustache-templating/mustache-templating-maven-plugin-adapter/: pom.xml
util/mustache-templating/mustache-templating-test-resources/: pom.xml
util/mustache-templating/mustache-templating-tests/: pom.xml
util/mustache-templating/mustache-templating-tests-2/: pom.xml
util/templating/: pom.xml
util/templating/templating-tests/: pom.xml
util/templating/templating-tests-2/: pom.xml
(+8477 files in other folders)
